# framework-rs

./: Cargo.toml  README.md
src/: framework_detector.rs  frameworks.rs  lib.rs
src/dependency/: base_library.rs  library_finder.rs  mod.rs
src/lang/: go.rs  js.rs  jvm.rs  mod.rs  rust.rs
